# Vendi-Score

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: images.ipynb  molecules.ipynb  text.ipynb
vendi_score/: data_utils.py  image_utils.py  inception.py  molecule_utils.py  notebook_utils.py  text_utils.py  vendi.py
