[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vendi-score"
version = "0.0.3"
description = 'A diversity metric for machine learning'
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT"}
keywords = []
authors = [
  { name = "Dan Friedman", email = "dfriedman@princeton.edu" },
]
classifiers = [
  "Programming Language :: Python :: 3",
]
dependencies = ["numpy>=1.14", "scipy>=1.3.2", "scikit-learn>=1.1"]

[project.urls]
Documentation = "https://github.com/vertaix/Vendi-Score"
Issues = "https://github.com/vertaix/Vendi-Score/issues"
Source = "https://github.com/vertaix/Vendi-Score"

[project.optional-dependencies]
images = ["torch", "torchvision", "matplotlib"]
text = ["torch", "transformers", "datasets", "nltk"]
molecules = ["rdkit"]
all = ["torch", "torchvision", "transformers", "datasets", "nltk", "rdkit", "matplotlib"]
